# mjboos.github.io

./: .gitignore  MIGRATION_NOTES.md  README.md  _config.yml  about.md  blog.md  conf.py  index.md  noxfile.py  projects.md  publications.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
_data/: navigation.yml
_pages/: about.md  cv.md
_portfolio/: deep_self_attention.md  jigsaw_kaggle_challenge.md  unsupervised_drinking.md  voxelwiseencoding_bids.md
_posts/: 2020-01-17-GMM-autograd.md  2020-07-31-Voxelwise-encoding-BIDS.md  2021-11-13-Unsupervised-typo-finder.md  2022-07-27-Deep-auditory-encoding-models-with-attention.md  2022-12-16-TIL_countplot.md
_publications/: 2016-05-Interindividual-differences-bayesian-modelling.md  2020-04-09-Role-of-auxiliary-parameters-voxelwise-encoding.md  2021-08-15-Generalizable-dimensions-of-human-cortical-auditory-processing.md
_static/: custom.css
blog/2020/: gmm-autograd.md  nilearn-surface-contours.md
blog/2021/: unsupervised-typo-finder.md
blog/2022/: deep-auditory-encoding-attention.md  til-countplot-labels.md
files/: Voxelwise_Encoding_BIDS.ipynb
